# concordium_gambling_plugin

./: .gitignore  FIXES_SUMMARY.md  FULL_INTEGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_FIXES.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  POST_FIX_CHECKLIST.md  QUICKSTART.md  QUICK_START.md  QUICK_START_NEW.md  README.md  README_NEW.md  docker-compose.yml  package-lock.json  start.bat  start.sh  test-integration.sh  verify-installation.sh
.claude/: settings.local.json
Frontend/: .env  .env.example  PACKAGE_UPDATE_REQUIRED.md  README.md  VERSION_FIX.md  package-lock.json  package.json  package.json.updated
Frontend/src/: App.css  App.tsx  main.tsx  wallet-connection.tsx
contracts/: BUILD_SUCCESS.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_CLI.md  README.md
contracts/.cargo/: config.toml
contracts/concordium-out/: module.wasm.v1
contracts/src/: lib.rs
frontend/src/: App.jsx
frontend_main/: .env.example  README.md  package-lock.json  vite.config.ts
frontend_main/src/: App.tsx  vite-env.d.ts  wallet-connection.tsx
frontend_website/: index.html
frontend_website/src/: App.css  App.tsx
logs/: .gitkeep
node-backend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  server.js  tsconfig.json
node-backend/src/: server.ts
node_backend/: .gitignore  README.md  package.json
python-backend/: .env  .env.example  README.md  docker-compose.yml  requirements.txt
python-backend/src/: main.py
python_backend/: Dockerfile  README.md  docker-compose.yml  requirements.txt
python_backend/src/: main.py
(+107 files in other folders)
