[package]
name = "payout_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
concordium-std = "10.1"

[features]
default = ["std"]
std = ["concordium-std/std"]

# Build settings for smart contract
[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
overflow-checks = true
